--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
     <header>
 
         <div class="secciones">
-            <h4 class="seccion"><a href="paginaprincipal.html">NEW DROPS</a></h4>
-            <h4 class="seccion"><a href="index.html">T-SHIRTS</a></h4>
+            <h4 class="seccion"><a href="index.html">NEW DROPS</a></h4>
+            <h4 class="seccion"><a href="seccionremeras.html">T-SHIRTS</a></h4>
             <h4 class="seccion"><a href="hoodies.html">HOODIES</a></h4>
             <h4 class="seccion"><a href="aboutus.html">ABOUT US</a></h4>
         </div>
     
        <div class="logo">
-            <a href="paginaprincipal.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="9000logo.png" alt="9000CLOTHING" width="110px" height="65px">
             </a>
        </div> 
@@ -32,13 +32,13 @@
         <nav class="navcontainer">
             <ul class="contenedorlista">
                 <li class="icon">
-                    <a href="index.html"><img src="magnifying-glass.png" alt="user" width="26px" height="26px"></a>
+                    <a href="seccionremeras.html"><img src="magnifying-glass.png" alt="user" width="26px" height="26px"></a>
                 </li>
                  <li class="icon">
-                    <a href="index.html"><img src="shopping-bag.png" alt="search" width="26px" height="26px"></a>
+                    <a href="seccionremeras.html"><img src="shopping-bag.png" alt="search" width="26px" height="26px"></a>
                  </li>
                  <li class="icon">
-                    <a href="index.html"><img src="avatar.png" alt="cart" width="26px" height="26px"></a>
+                    <a href="seccionremeras.html"><img src="avatar.png" alt="cart" width="26px" height="26px"></a>
                  </li>
             </ul>
         </nav>
@@ -48,139 +48,25 @@
 
 <main>
 
-<aside>
-    <div class="goback">
-        <p> <a href="paginaprincipal.html">Inicio</a> > <a href="index.html">Remeras</a></p>
-    </div>
-
-    <form method="GET" action="ruta_a_tu_tienda">
-        <label for="sort" class="sortlabel">SORT BY:</label>
-        <select name="sort" id="sort" onchange="this.form.submit()">
-          <option value="default">RELEVANCIA</option>
-          <option value="price-asc">PRECIO: MENOR A MAYOR</option>
-          <option value="price-desc">PRECIO: MAYOR A MENOR</option>
-          <option value="name-asc">NOMBRE: A-Z</option>
-          <option value="name-desc">NOMBRE: Z-A</option>
-        </select>
-      </form>
-      
-</aside>
-
-<article class="primerafila">
-    <div class="articulo">
-       <a href="remeracomprar.html"> 
-            <img src="camisetasnani/camiseta1.png" alt="camiseta1" width="100%" class="artimgtxt">
-            <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-        </a> 
-    </div>
-    <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/333remera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
-     <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/obbeyallianceremera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
-     <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/zanbororemera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
+<article class="adbar">
+    <h5 class="txtadbar">NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 -</h5>
+    <h5 class="txtadbar">NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 - NEW DROPS 333 -</h5>
 </article>
 
-<article class="primerafila">
-    <div class="articulo">
-       <a href="remeracomprar.html"> 
-            <img src="camisetasnani/camiseta1.png" alt="camiseta1" width="100%" class="artimgtxt">
-            <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-        </a> 
+<article class="presentacion">
+    <div class="contenedor1">
+        <a href="seccionremeras.html"> <img src="camisetasnani/e2687f40-42e9-4130-8150-9f317229e16d_rw_1920.png" alt="fondo1" width="100%"> </a>
     </div>
-    <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/333remera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
-     <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/obbeyallianceremera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
-     <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/zanbororemera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
-</article>
+    <div class="contenedor2">
+        <a href="seccionremeras.html"> <img src="camisetasnani/fondo3.png" alt="fond1" width="100%"> </a>
+    </div>
+    <div class="contenedor3">
+        <a href="seccionremeras.html"> <img src="camisetasnani/333remera.png" alt="fond23" width="100%"> </a>            
+    </div>
 
-<article class="primerafila">
-    <div class="articulo">
-       <a href="remeracomprar.html"> 
-            <img src="camisetasnani/camiseta1.png" alt="camiseta1" width="100%" class="artimgtxt">
-            <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-        </a> 
-    </div>
-    <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/333remera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
-     <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/obbeyallianceremera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
-     <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/zanbororemera.png" alt="camiseta1" width="100%" class="artimgtxt">
-             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
-                <p class="txtprecio">$ 49.999</p>
-             </div>
-         </a> 
-     </div>
+</article>
+<article class="fondocompleto">
+    <img src="camisetasnani/fondo4.png" alt="" width="100%">
 </article>
 
 </main>
@@ -190,10 +76,10 @@
     <div class="partecentro">
 
         <div class="menu">
-            <p id="menufooter"><a href="paginaprincipal.html">Menu</a></p>
+            <p id="menufooter"><a href="index.html">Menu</a></p>
                 <ul class="listaitemsmenufooter">
-                    <li ><p><a href="paginaprincipal.html">NEW DROPS</a></p></li>
-                    <li><p><a href="index.html">T-SHIRTS</a></p></li>
+                    <li ><p><a href="index.html">NEW DROPS</a></p></li>
+                    <li><p><a href="seccionremeras.html">T-SHIRTS</a></p></li>
                 </ul>
                 <ul class="listaitemsmenufooter">
                     <li><p><a href="hoodies.html">HOODIES</a></p></li>
@@ -225,17 +111,16 @@
         <p>© 9000CLOTHING - 2024</p>
     </div>
     <div class="redess">
-        <a href="index.html"> 
+        <a href="seccionremeras.html"> 
             <img src="instagram (3).png" alt="Instagram" width="16px"> 
         </a>
-        <a href="index.html"> 
+        <a href="seccionremeras.html"> 
             <img src="twitter (1).png" alt="Instagram" width="16px"> 
         </a>
-        <a href="index.html"> 
+        <a href="seccionremeras.html"> 
             <img src="tik-tok.png" alt="Instagram" width="16px"> 
         </a>
     </div>
-</div>
 </div>
 
 
