--- a/remeracomprar.html
+++ b/remeracomprar.html
@@ -16,14 +16,14 @@
 <header>
 
     <div class="secciones">
-        <h4 class="seccion"><a href="paginaprincipal.html">NEW DROPS</a></h4>
-        <h4 class="seccion"><a href="index.html">T-SHIRTS</a></h4>
+        <h4 class="seccion"><a href="index.html">NEW DROPS</a></h4>
+        <h4 class="seccion"><a href="seccionremeras.html">T-SHIRTS</a></h4>
         <h4 class="seccion"><a href="hoodies.html">HOODIES</a></h4>
         <h4 class="seccion"><a href="aboutus.html">ABOUT US</a></h4>
     </div>
 
    <div class="logo">
-        <a href="paginaprincipal.html" class="logo">
+        <a href="index.html" class="logo">
             <img src="9000logo.png" alt="9000CLOTHING" width="110px" height="65px">
         </a>
    </div> 
@@ -32,13 +32,13 @@
     <nav class="navcontainer">
         <ul class="contenedorlista">
             <li class="icon">
-                <a href="index.html"><img src="magnifying-glass.png" alt="user" width="26px" height="26px"></a>
+                <a href="seccionremeras.html"><img src="magnifying-glass.png" alt="user" width="26px" height="26px"></a>
             </li>
              <li class="icon">
-                <a href="index.html"><img src="shopping-bag.png" alt="search" width="26px" height="26px"></a>
+                <a href="seccionremeras.html"><img src="shopping-bag.png" alt="search" width="26px" height="26px"></a>
              </li>
              <li class="icon">
-                <a href="index.html"><img src="avatar.png" alt="cart" width="26px" height="26px"></a>
+                <a href="seccionremeras.html"><img src="avatar.png" alt="cart" width="26px" height="26px"></a>
              </li>
         </ul>
     </nav>
@@ -58,7 +58,7 @@
         <div class="partecompraderecha">
             <h1>REMERA EXAMPLE LOREM - GRAY/GREEN</h1>
             <h1>$214.503,00</h1>
-            <p><a href="index.html">&#8592; Volver al catalogo</a></p>
+            <p><a href="seccionremeras.html">&#8592; Volver al catalogo</a></p>
             <p>Talle:</p>
             <div class="selectorestalle">
                 <form action="">
@@ -95,7 +95,7 @@
                 <input type="button" value="Añadir al carrito &#8594;">
             </div>
             <div class="guiatallesyreseñas">
-                <p><a href="index.html">- Guia de talles</a></p>
+                <p><a href="seccionremeras.html">- Guia de talles</a></p>
                 <p><a href="reseñas.html">- Reseñas</a></p>
             </div>
         </div>
@@ -113,10 +113,10 @@
     <div class="partecentro">
 
         <div class="menu">
-            <p id="menufooter"><a href="paginaprincipal.html">Menu</a></p>
+            <p id="menufooter"><a href="index.html">Menu</a></p>
                 <ul class="listaitemsmenufooter">
-                    <li ><p><a href="paginaprincipal.html">NEW DROPS</a></p></li>
-                    <li><p><a href="index.html">T-SHIRTS</a></p></li>
+                    <li ><p><a href="index.html">NEW DROPS</a></p></li>
+                    <li><p><a href="seccionremeras.html">T-SHIRTS</a></p></li>
                 </ul>
                 <ul class="listaitemsmenufooter">
                     <li><p><a href="hoodies.html">HOODIES</a></p></li>
@@ -148,13 +148,13 @@
         <p>© 9000CLOTHING - 2024</p>
     </div>
     <div class="redess">
-        <a href="index.html"> 
+        <a href="seccionremeras.html"> 
             <img src="instagram (3).png" alt="Instagram" width="16px"> 
         </a>
-        <a href="index.html"> 
+        <a href="seccionremeras.html"> 
             <img src="twitter (1).png" alt="Instagram" width="16px"> 
         </a>
-        <a href="index.html"> 
+        <a href="seccionremeras.html"> 
             <img src="tik-tok.png" alt="Instagram" width="16px"> 
         </a>
     </div>
