--- a/seccionremeras.html
+++ b/seccionremeras.html
@@ -50,7 +50,7 @@
 
 <aside>
     <div class="goback">
-        <p> <a href="index.html">Inicio</a> > <a href="hoodies.html">Hoodies</a></p>
+        <p> <a href="index.html">Inicio</a> > <a href="seccionremeras.html">Remeras</a></p>
     </div>
 
     <form method="GET" action="ruta_a_tu_tienda">
@@ -69,7 +69,7 @@
 <article class="primerafila">
     <div class="articulo">
        <a href="remeracomprar.html"> 
-            <img src="camisetasnani/buzo1sinfondo.png" alt="camiseta1" width="100%" class="artimgtxt">
+            <img src="camisetasnani/camiseta1.png" alt="camiseta1" width="100%" class="artimgtxt">
             <div class="textoarticulo">
                 <p class="txtart">Ejemplo Articulo X</p>
                 <p class="txtprecio">$ 49.999</p>
@@ -78,7 +78,7 @@
     </div>
     <div class="articulo">
         <a href="remeracomprar.html"> 
-             <img src="camisetasnani/buzo2.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <img src="camisetasnani/333remera.png" alt="camiseta1" width="100%" class="artimgtxt">
              <div class="textoarticulo">
                 <p class="txtart">Ejemplo Articulo X</p>
                 <p class="txtprecio">$ 49.999</p>
@@ -87,8 +87,7 @@
      </div>
      <div class="articulo">
         <a href="remeracomprar.html"> 
-             <img src="camisetasnani/buzo3.png" alt="camiseta1" width="100%" class="artimgtxt" id="buzo333">
-             
+             <img src="camisetasnani/obbeyallianceremera.png" alt="camiseta1" width="100%" class="artimgtxt">
              <div class="textoarticulo">
                 <p class="txtart">Ejemplo Articulo X</p>
                 <p class="txtprecio">$ 49.999</p>
@@ -96,7 +95,91 @@
          </a> 
      </div>
      <div class="articulo">
+        <a href="remeracomprar.html"> 
+             <img src="camisetasnani/zanbororemera.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+         </a> 
+     </div>
+</article>
 
+<article class="primerafila">
+    <div class="articulo">
+       <a href="remeracomprar.html"> 
+            <img src="camisetasnani/camiseta1.png" alt="camiseta1" width="100%" class="artimgtxt">
+            <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+        </a> 
+    </div>
+    <div class="articulo">
+        <a href="remeracomprar.html"> 
+             <img src="camisetasnani/333remera.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+         </a> 
+     </div>
+     <div class="articulo">
+        <a href="remeracomprar.html"> 
+             <img src="camisetasnani/obbeyallianceremera.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+         </a> 
+     </div>
+     <div class="articulo">
+        <a href="remeracomprar.html"> 
+             <img src="camisetasnani/zanbororemera.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+         </a> 
+     </div>
+</article>
+
+<article class="primerafila">
+    <div class="articulo">
+       <a href="remeracomprar.html"> 
+            <img src="camisetasnani/camiseta1.png" alt="camiseta1" width="100%" class="artimgtxt">
+            <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+        </a> 
+    </div>
+    <div class="articulo">
+        <a href="remeracomprar.html"> 
+             <img src="camisetasnani/333remera.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+         </a> 
+     </div>
+     <div class="articulo">
+        <a href="remeracomprar.html"> 
+             <img src="camisetasnani/obbeyallianceremera.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+         </a> 
+     </div>
+     <div class="articulo">
+        <a href="remeracomprar.html"> 
+             <img src="camisetasnani/zanbororemera.png" alt="camiseta1" width="100%" class="artimgtxt">
+             <div class="textoarticulo">
+                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtprecio">$ 49.999</p>
+             </div>
+         </a> 
      </div>
 </article>
 
