--- a/aboutus.html
+++ b/aboutus.html
@@ -35,7 +35,7 @@
                     <a href="seccionremeras.html"><img src="magnifying-glass.png" alt="user" width="26px" height="26px"></a>
                 </li>
                  <li class="icon">
-                    <a href="seccionremeras.html"><img src="shopping-bag.png" alt="search" width="26px" height="26px"></a>
+                    <a href="carrito.html"><img src="shopping-bag.png" alt="search" width="26px" height="26px" id="chequearcarrito"></a>
                  </li>
                  <li class="icon">
                     <a href="seccionremeras.html"><img src="avatar.png" alt="cart" width="26px" height="26px"></a>
@@ -129,6 +129,6 @@
 
 
 
-
+<script src="script.js"></script>
 </body>
 </html>
