Cambios en el carrito

--- a/hoodies.html
+++ b/hoodies.html
@@ -68,29 +68,29 @@
 
 <article class="primerafila">
     <div class="articulo">
-       <a href="remeracomprar.html"> 
-            <img src="camisetasnani/buzo1sinfondo.png" alt="camiseta1" width="100%" class="artimgtxt">
+       <a href="buzo-negro-calavera.html"> 
+            <img src="camisetasnani/BUZOCALAVERA.png" alt="camiseta1" width="100%" class="artimgtxt">
             <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtart">BUZO CALAVERA NEGRA</p>
                 <p class="txtprecio">$ 49.999</p>
              </div>
         </a> 
     </div>
     <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/buzo2.png" alt="camiseta1" width="100%" class="artimgtxt">
+        <a href="buzo-333.html"> 
+             <img src="camisetasnani/BUZO333.png" alt="camiseta1" width="100%" class="artimgtxt">
              <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtart">BUZO 333 HALF-EVIL</p>
                 <p class="txtprecio">$ 49.999</p>
              </div>
          </a> 
      </div>
      <div class="articulo">
-        <a href="remeracomprar.html"> 
-             <img src="camisetasnani/buzo3.png" alt="camiseta1" width="100%" class="artimgtxt" id="buzo333">
+        <a href="buzo-obey-alliance.html"> 
+             <img src="camisetasnani/BUZOOBEYALLIANCE.png" alt="camiseta1" width="100%" class="artimgtxt" id="buzo333">
              
              <div class="textoarticulo">
-                <p class="txtart">Ejemplo Articulo X</p>
+                <p class="txtart">BUZO OBEY ALLIANCE</p>
                 <p class="txtprecio">$ 49.999</p>
              </div>
          </a> 
