--- a/seccionremeras.html
+++ b/seccionremeras.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
     <link href="https://fonts.cdnfonts.com/css/helvetica-neue-55?styles=15999" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
    
     <title>9000CLOTHING</title>
@@ -50,7 +54,7 @@
 
 <aside>
     <div class="goback">
-        <p> <a href="index.html">Inicio</a> > <a href="seccionremeras.html">Remeras</a></p>
+        <p> <a href="index.html">Inicio</a> &#8594; <a href="seccionremeras.html">Remeras</a></p>
     </div>
 
     <form method="GET" action="ruta_a_tu_tienda">
