cambios en compra de buzo

--- a/buzo-333.html
+++ b/buzo-333.html
@@ -101,8 +101,9 @@
                 <input type="button" value="Añadir al carrito &#8594;" id="botonaniadircarrito">
             </div>
             <div class="guiatallesyreseñas">
-                <p><a href="seccionremeras.html">- Guia de talles</a></p>
-                <p><a href="reseñas.html">- Reseñas</a></p>
+                <div class="contenedorinputtalles">
+                    <input type="button" id="guiadetallesbtn" value="+ Guia de talles">
+                </div>
             </div>
         </div>
 
